--- a/JournalDataManager/JournalDataManager.csproj
+++ b/JournalDataManager/JournalDataManager.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JournalDataManager\JournalDataManager.csproj" />
+    <ProjectReference Include="..\JournalCommon\JournalCommon.csproj" />
   </ItemGroup>
 
 </Project>
