--- a/JournalDataManager/Journal_DataLogic.csproj
+++ b/JournalDataManager/Journal_DataLogic.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JournalDataManager\JournalDataManager.csproj" />
+    <ProjectReference Include="..\JournalCommon\Journal_Common.csproj" />
   </ItemGroup>
 
 </Project>
