--- a/Journal_DataLogic/Journal_DataLogic.csproj
+++ b/Journal_DataLogic/Journal_DataLogic.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JournalCommon\Journal_Common.csproj" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Journal_Common\Journal_Common.csproj" />
   </ItemGroup>
 
 </Project>
