--- a/Journal_BusinessLogic/Journal_BusinessLogic.csproj
+++ b/Journal_BusinessLogic/Journal_BusinessLogic.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JournalCommon\Journal_Common.csproj" />
-    <ProjectReference Include="..\JournalDataManager\Journal_DataLogic.csproj" />
+    <ProjectReference Include="..\Journal_DataLogic\Journal_DataLogic.csproj" />
   </ItemGroup>
 
 </Project>
