--- a/PJ_API/PJ_API.csproj
+++ b/PJ_API/PJ_API.csproj
@@ -13,6 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Journal_BusinessLogic\Journal_BusinessLogic.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Journal_BusinessLogic">
       <HintPath>..\Journal_BusinessLogic\bin\Debug\net8.0\Journal_BusinessLogic.dll</HintPath>
     </Reference>
